--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 
     <div class="team-grid">
         <div class="team-member">
-            <img src="https://images.unsplash.com/photo-1559757148-5c350d0d3c56?ixlib=rb-4.0.3&auto=format&fit=crop&w=150&h=120&q=80" alt="Sophia">
+            <img src="screenshot1.png" alt="Sophia">
             <h3>Sophia Hartman</h3>
             <h4>Founder & CEO</h4>
             <p class="quote">"Innovation distinguishes between a leader and a follower." — Steve Jobs</p>
