--- a/index.html
+++ b/index.html
@@ -115,49 +115,49 @@
         </div>
 
         <div class="team-member">
-            <img src="https://images.unsplash.com/photo-1507003211169-0a1dd7228f2d?ixlib=rb-4.0.3&auto=format&fit=crop&w=150&h=120&q=80" alt="Max">
+            <img src="screenshot2.png" alt="Max">
             <h3>Max Rivera</h3>
             <h4>Creative Director</h4>
             <p class="quote">"We are all in the gutter, but some of us are looking at the stars." — Oscar Wilde</p>
         </div>
 
         <div class="team-member">
-            <img src="https://images.unsplash.com/photo-1494790108755-2616b612b786?ixlib=rb-4.0.3&auto=format&fit=crop&w=150&h=120&q=80" alt="Emma">
+            <img src="screenshot3.png" alt="Emma">
             <h3>Emma Hartman-Zhang</h3>
             <h4>Head Editor</h4>
             <p class="quote">"The truth is rarely pure and never simple." — Oscar Wilde</p>
         </div>
 
         <div class="team-member">
-            <img src="https://images.unsplash.com/photo-1438761681033-6461ffad8d80?ixlib=rb-4.0.3&auto=format&fit=crop&w=150&h=120&q=80" alt="Lila">
+            <img src="screenshot4.png" alt="Lila">
             <h3>Lila Thompson</h3>
             <h4>Marketing Lead</h4>
             <p class="quote">"Love is a choice to be made again and again." — Emily Henry</p>
         </div>
 
         <div class="team-member">
-            <img src="https://images.unsplash.com/photo-1500648767791-00dcc994a43e?ixlib=rb-4.0.3&auto=format&fit=crop&w=150&h=120&q=80" alt="Javier">
+            <img src="screenshot5.png" alt="Javier">
             <h3>Javier Hartman</h3>
             <h4>Events Coordinator</h4>
             <p class="quote">"There is nothing I would not do for my friends." — Jane Austen</p>
         </div>
 
         <div class="team-member">
-            <img src="https://images.unsplash.com/photo-1552664730-d307ca884978?ixlib=rb-4.0.3&auto=format&fit=crop&w=150&h=120&q=80" alt="Claire">
+            <img src="screenshot6.png" alt="Claire">
             <h3>Claire Hartman</h3>
             <h4>Operations Manager</h4>
             <p class="quote">"Chaos is merely order waiting to be deciphered." — José Saramago</p>
         </div>
 
         <div class="team-member">
-            <img src="https://images.unsplash.com/photo-1506784367992-9bc7a9cc2d0f?ixlib=rb-4.0.3&auto=format&fit=crop&w=150&h=120&q=80" alt="Ethan">
+            <img src="screenshot7.png" alt="Ethan">
             <h3>Ethan Brooks</h3>
             <h4>Visual Designer</h4>
             <p class="quote">"I am no bird; and no net ensnares me." — Charlotte Brontë</p>
         </div>
 
         <div class="team-member">
-            <img src="https://images.unsplash.com/photo-1543466835-00a7907e9de1?ixlib=rb-4.0.3&auto=format&fit=crop&w=150&h=120&q=80" alt="Mr. Darcy">
+            <img src="screenshot8.png" alt="Mr. Darcy">
             <h3>Mr. Darcy Hartman</h3>
             <h4>Head of Cuddles</h4>
             <p class="quote">"I can't read, I'm a dog... but I love all the smells of books!"</p>
